--- a/DrawingSpinUp_jupyter.ipynb
+++ b/DrawingSpinUp_jupyter.ipynb
@@ -56,7 +56,10 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!xvfb-run python run_render.py --uid ff7ab74a67a443e3bda61e69577f4e80 --test"
+        "!xvfb-run python run_render.py --uid ff7ab74a67a443e3bda61e69577f4e80 --test\n",
+        "!xvfb-run python test_stage1.py --uid ff7ab74a67a443e3bda61e69577f4e80\n",
+        "!xvfb-run python test_stage2.py --uid ff7ab74a67a443e3bda61e69577f4e80\n",
+        "!xvfb-run python gif_writer.py --uid ff7ab74a67a443e3bda61e69577f4e80"
       ]
     }
   ],
