--- a/DrawingSpinUp_jupyter.ipynb
+++ b/DrawingSpinUp_jupyter.ipynb
@@ -23,7 +23,8 @@
         "!git clone https://github.com/cprogrammer1994/python-mesh-raycast\n",
         "%cd /content/python-mesh-raycast\n",
         "!python setup.py develop\n",
-        "!pip install git+https://github.com/NVlabs/tiny-cuda-nn/#subdirectory=bindings/torch\n",
+        "# !pip install git+https://github.com/NVlabs/tiny-cuda-nn/#subdirectory=bindings/torch\n",
+        "!pip install https://github.com/camenduru/wheels/releases/download/colab2/tinycudann-1.7-cp310-cp310-linux_x86_64.whl\n",
         "%cd /content\n",
         "!git clone https://github.com/LordLiang/DrawingSpinUp\n",
         "%cd /content/DrawingSpinUp\n",
