--- a/DrawingSpinUp_jupyter.ipynb
+++ b/DrawingSpinUp_jupyter.ipynb
@@ -19,7 +19,14 @@
       "source": [
         "%cd /content\n",
         "!apt install xvfb\n",
-        "!pip install opencv-python openexr pyyaml\n",
+        "!mkdir /content/pytorch3d\n",
+        "%cd /content/pytorch3d\n",
+        "!pip wheel -v git+https://github.com/facebookresearch/pytorch3d\n",
+        "!pip install /content/pytorch3d/pytorch3d-0.7.8-cp310-cp310-linux_x86_64.whl\n",
+        "\n",
+        "!pip install opencv-python openexr pyyaml einops omegaconf onnxruntime accelerate diffusers[torch]==0.19.3 transformers==4.25.1 pytorch_lightning==1.9.5 nerfacc==0.3.3 trimesh==3.9.8 scikit-learn\n",
+        "!pip install libigl scikit-image pymcubes numpy==1.26.4 open3d\n",
+        "\n",
         "!git clone https://github.com/cprogrammer1994/python-mesh-raycast\n",
         "%cd /content/python-mesh-raycast\n",
         "!python setup.py develop\n",
@@ -45,10 +52,7 @@
         "# !xvfb-run python run_render.py --uid ff7ab74a67a443e3bda61e69577f4e80 --test\n",
         "# !xvfb-run python test_stage1.py --uid ff7ab74a67a443e3bda61e69577f4e80\n",
         "# !xvfb-run python test_stage2.py --uid ff7ab74a67a443e3bda61e69577f4e80\n",
-        "# !xvfb-run python gif_writer.py --uid ff7ab74a67a443e3bda61e69577f4e80\n",
-        "\n",
-        "# !xvfb-run python mv.py --uid ff7ab74a67a443e3bda61e69577f4e80\n",
-        "# !xvfb-run python recon.py --uid ff7ab74a67a443e3bda61e69577f4e80"
+        "# !xvfb-run python gif_writer.py --uid ff7ab74a67a443e3bda61e69577f4e80"
       ]
     },
     {
@@ -57,10 +61,17 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!xvfb-run python run_render.py --uid ff7ab74a67a443e3bda61e69577f4e80 --test\n",
-        "!xvfb-run python test_stage1.py --uid ff7ab74a67a443e3bda61e69577f4e80\n",
-        "!xvfb-run python test_stage2.py --uid ff7ab74a67a443e3bda61e69577f4e80\n",
-        "!xvfb-run python gif_writer.py --uid ff7ab74a67a443e3bda61e69577f4e80"
+        "%cd /content/DrawingSpinUp/2_charactor_reconstructor\n",
+        "!mkdir /content/DrawingSpinUp/2_charactor_reconstructor/dis_pretrained\n",
+        "%cd /content/DrawingSpinUp/2_charactor_reconstructor/dis_pretrained\n",
+        "!wget https://huggingface.co/stoned0651/isnet_dis.onnx/resolve/main/isnet_dis.onnx -O /content/DrawingSpinUp/2_charactor_reconstructor/dis_pretrained/isnet_dis.onnx\n",
+        "%cd /content/DrawingSpinUp/2_charactor_reconstructor\n",
+        "!xvfb-run python mv.py --uid ff7ab74a67a443e3bda61e69577f4e81\n",
+        "import os\n",
+        "os.environ['PATH'] += ':/usr/local/cuda/bin'\n",
+        "!nvcc --version\n",
+        "%cd /content/DrawingSpinUp/2_charactor_reconstructor\n",
+        "!xvfb-run python recon.py --uid ff7ab74a67a443e3bda61e69577f4e81"
       ]
     }
   ],
