--- a/DrawingSpinUp_jupyter.ipynb
+++ b/DrawingSpinUp_jupyter.ipynb
@@ -52,7 +52,16 @@
         "# !xvfb-run python run_render.py --uid ff7ab74a67a443e3bda61e69577f4e80 --test\n",
         "# !xvfb-run python test_stage1.py --uid ff7ab74a67a443e3bda61e69577f4e80\n",
         "# !xvfb-run python test_stage2.py --uid ff7ab74a67a443e3bda61e69577f4e80\n",
-        "# !xvfb-run python gif_writer.py --uid ff7ab74a67a443e3bda61e69577f4e80"
+        "# !xvfb-run python gif_writer.py --uid ff7ab74a67a443e3bda61e69577f4e80\n",
+        "\n",
+        "%cd /content/DrawingSpinUp/2_charactor_reconstructor\n",
+        "!mkdir /content/DrawingSpinUp/2_charactor_reconstructor/dis_pretrained\n",
+        "%cd /content/DrawingSpinUp/2_charactor_reconstructor/dis_pretrained\n",
+        "!wget https://huggingface.co/stoned0651/isnet_dis.onnx/resolve/main/isnet_dis.onnx -O /content/DrawingSpinUp/2_charactor_reconstructor/dis_pretrained/isnet_dis.onnx\n",
+        "\n",
+        "import os\n",
+        "os.environ['PATH'] += ':/usr/local/cuda/bin'\n",
+        "!nvcc --version"
       ]
     },
     {
@@ -62,15 +71,7 @@
       "outputs": [],
       "source": [
         "%cd /content/DrawingSpinUp/2_charactor_reconstructor\n",
-        "!mkdir /content/DrawingSpinUp/2_charactor_reconstructor/dis_pretrained\n",
-        "%cd /content/DrawingSpinUp/2_charactor_reconstructor/dis_pretrained\n",
-        "!wget https://huggingface.co/stoned0651/isnet_dis.onnx/resolve/main/isnet_dis.onnx -O /content/DrawingSpinUp/2_charactor_reconstructor/dis_pretrained/isnet_dis.onnx\n",
-        "%cd /content/DrawingSpinUp/2_charactor_reconstructor\n",
         "!xvfb-run python mv.py --uid ff7ab74a67a443e3bda61e69577f4e81\n",
-        "import os\n",
-        "os.environ['PATH'] += ':/usr/local/cuda/bin'\n",
-        "!nvcc --version\n",
-        "%cd /content/DrawingSpinUp/2_charactor_reconstructor\n",
         "!xvfb-run python recon.py --uid ff7ab74a67a443e3bda61e69577f4e81"
       ]
     }
